# cpython_automata

./: .gitmodules  Makefile  README.md  automata.c  automata.h  debug.h  dict.c  dict.h  edit_distance.py  foo.c  install.sh  list.c  list.c~  list.h  list.h~  measure_perf.py  pyproject.toml  pyta.c  setup.py  test_automata.c  test_dict.c  test_inter.c  test_pyta.py  test_utils.c  utils.c  utils.h
c_backend/: Makefile  README.md  foo.c  pyproject.toml  pyta_c_backend.c  setup.py  test_dict.c  test_inter.c  test_list.c
c_backend/src/pyta_c_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
pyta/: __init__.py  decoding.py  test_pyta.py
pyta/algebra/: terms.py
pyta/automata/: __init__.py  pure_python.py  semirings.py
python/: README.md  pyproject.toml
python/src/pyta/: __init__.py
python/src/pyta/algebra/: FreeMonoid.py  LeftConcAlgebra.py  terms.py
python/src/pyta/automata/: __init__.py  semirings.py
python/src/pyta/edit_distance/: levenstein.py
python/src/pyta/experiments/: measure_perf.py
src/: Makefile  dict.h  list.c  list.h  pyta_core.c  setup.py  test_pyta.py
src/pyta/: automata.c  automata.h
src/pyta/automata/: __init__.py  edit_transducer.py  pure_python.py
src/pyta/edit_distance/: decoding.py  edit_distance.py  edit_transducer.py  measure_perf.py
src/pyta/util/: encoders.py  misc.py
